<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:layout="@layout/preference_category_layout" app:title="@string/settings_environment" >
        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:defaultValue="1"
            app:key="number_of_consecutive_tests"
            app:title="@string/number_of_consecutive_tests"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:defaultValue=""
            app:key="observer_address"
            app:title="@string/observer_address_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:defaultValue=""
            app:key="aggregator_address"
            app:title="@string/aggregator_address_title"
            app:useSimpleSummaryProvider="true" />


        <ListPreference
            android:layout="@layout/listpreference_layout"
            android:key="@string/direction"
            android:title="Direction"
            android:entries="@array/function_array"
            android:entryValues="@array/function_array_value"
            android:defaultValue="0"
            />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_layout" app:title="@string/messages_UDP_header">

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="pack_size_UDP_RTT"
            app:defaultValue="1"
            app:title="@string/pack_size_RTT_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="pack_size_UDP_BANDWIDTH"
            app:defaultValue="1024"
            app:title="@string/pack_size_BANDWIDTH_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="num_pack_UDP_RTT"
            app:defaultValue="100"
            app:title="@string/num_pack_RTT_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="num_pack_UDP_BANDWIDTH"
            app:defaultValue="2"
            app:title="@string/num_pack_BANDWIDTH_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_layout" app:title="@string/messages_TCP_header">

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="pack_size_TCP_RTT"
            app:defaultValue="1"
            app:title="@string/pack_size_RTT_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="pack_size_TCP_BANDWIDTH"
            app:defaultValue="1024"
            app:title="@string/pack_size_BANDWIDTH_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="num_pack_TCP_RTT"
            app:defaultValue="100"
            app:title="@string/num_pack_RTT_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout="@layout/edit_text_preference_layout"
            app:key="num_pack_TCP_BANDWIDTH"
            app:defaultValue="1024"
            app:title="@string/num_pack_BANDWIDTH_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



</androidx.preference.PreferenceScreen>
