<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/TCPBandwidthbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tcp_bandwidth"
        app:layout_constraintStart_toStartOf="@+id/UDPBandwidthbutton"
        app:layout_constraintTop_toBottomOf="@+id/UDPBandwidthbutton" />

    <!--
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TCPRTTbutton"
        app:layout_constraintTop_toBottomOf="@+id/TCPRTTbutton" />
    -->

    <TextView
        android:id="@+id/Functionalities"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/functionalities"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/direction_spinner"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Functionalities"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/UDPBandwidthbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/udp_bandwidth"
        app:layout_constraintStart_toStartOf="@+id/Functionalities"
        app:layout_constraintTop_toBottomOf="@+id/MeasurementsTextView" />

    <Button
        android:id="@+id/TCPRTTbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/tcp_rtt"
        app:layout_constraintStart_toEndOf="@+id/TCPBandwidthbutton"
        app:layout_constraintTop_toBottomOf="@+id/UDPRTTbutton"
        tools:text="TCP RTT" />

    <Button
        android:id="@+id/UDPRTTbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/udp_rtt"
        app:layout_constraintEnd_toEndOf="@+id/direction_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/UDPBandwidthbutton"
        app:layout_constraintTop_toBottomOf="@+id/MeasurementsTextView" />

    <TextView
        android:id="@+id/MeasurementsTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:text="What do you want to measure?"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="@+id/direction_spinner"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/Functionalities"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/measurementsTextView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="8dp"
        android:text="Insert a keyword to describe this measurement"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/direction_spinner"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/Functionalities"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/keyWordEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="415dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext_border"
        android:hint="Insert Keyword"
        android:inputType="text"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>