<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".BandwidthActivity"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/bandwidthMeasurementsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintBottom_toTopOf="@+id/tcp_bandwidth_diagram"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="1.0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/tcp_bandwidth_diagram"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/tcp_bandwidth_graphic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
            />

            <Button
                android:id="@+id/tcp_bandwidth_more"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tcp_bandwidth_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
            />

            <Button
                android:id="@+id/tcp_bandwidth_less"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tcp_bandwidth_less"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
             />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>